--- a/_posts/0000-01-02-nvhung166.md
+++ b/_posts/0000-01-02-nvhung166.md
@@ -2,7 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Tom's here!
 Use the left arrow to go back!
-
-Create another line for commit testing
